2009-08-30
- added taskbar_active_background_id to change current desktop background.
  warning : this feature have a price on cpu (tint2 redraw all task) when you switch desktop.
  comment out taskbar_active_background_id if you don't want it.

2009-08-30
- fixed issue 130 by maato
  ordered systray icon with config "systray_sort = asc/desc"

2009-08-29
- fixed issue 134

2009-08-29
- cleanup and add desktop_right/desktop_left action on task (by jackp)

2009-08-29
- adjust saturation/brightness on task icon

2009-08-29
- merge change described in issue 122 (by jackp)
  made right click easier

2009-08-28
- add some HSB config

2009-08-09
- add mouse action : maximize_restore
- fixed issue 125

2009-07-28
- some tint2conf code

2009-07-26
- fixed icon on 64 bit system by benjaminfranzke

2009-07-19
- fixed systray crash by mart1987

2009-07-14
- play with some tint2conf code

2009-07-04
- fixed 'defunct' process after fork

----------------------------------------------------------------
2009-06-30  thilor77 <lorthiois@bbsoft.fr>
released tint-0.7

2009-06-29
- fixed bug when active window draged to another desktop

2009-06-29
- fixed issue 110 and issue 107

2009-06-25
- improve user's message when compiled with --disable-battery
- replace 'task_width = width' by 'task_maximum_size = width height'
  width will be used in horizontal panel
  height will be used in vertical panel

2009-06-24
- vertical panel done
  user's parameters :
  1) add 'vertical' to panel_position (panel_position = center left vertical)
  2) use 'task_width' to define the task height (task_width = 30)
  3) adjust paddingy on task and systray wiil define the size of icons
  all others parameters are automatically converted by tint2
  (x padding become y padding, width become height ...)
  so user's change between horizontal and vertical are minimised.

2009-06-23
- play with vertical panel
  check sample file tintrc05 and tintrc06
  more change to come...

2009-06-21